fixed nav spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -10,13 +10,17 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #000;
-    background-color: #FFFFFF;
+    background-color: #000;
     background-attachment: fixed;
 }
 
 html {
     width: 100%;
     height: 100%;
+}
+
+#contact {
+    background-color: #fff;
 }
 
 h1,
